deploy script